--- a/campus.html
+++ b/campus.html
@@ -56,16 +56,26 @@
 
     <!--------------- HEADING ------------------->
 
-
-    <div class="heading-container">
-      <div class="main-heading">
-        <h1>
-          Våre studiesteder
-        </h1>
-        <p>
-          OsloMet har studiesteder både i Oslo og på Kjeller ved Lillestrøm. Vårt største campus ligger sentralt i Oslo 
-          ved Bislett, og campusen på Kjeller er lett tilgjengelig med kollektivtransport fra Oslo sentrum og Oslo lufthavn. 
-        </p>
+    <div class="content-campus">
+      <div class="heading-container">
+        <div class="main-heading">
+          <div>
+            <h1>
+              Våre studiesteder
+            </h1>
+            <p>
+              OsloMet har studiesteder både i Oslo og <br>  
+              på Kjeller ved Lillestrøm. Vårt største campus <br> 
+              ligger sentralt i Oslo ved Bislett, og campusen på <br>
+              Kjeller er lett tilgjengelig med kollektivtransport <br>
+              fra Oslo sentrum og Oslo lufthavn. 
+            </p>
+          </div>
+        </div>
+        <!-- Bildet forsvinner når skjermen er mindre -->
+        <div class="content-index-campus">
+          <img src="img/University-9.webp" class="image-campus" alt="illustrasjon_av_student">
+        </div>
       </div>
     </div>
     <div>
@@ -74,6 +84,13 @@
         target="_blank">
       <!-- Kilde hvor bildet er hentet fra  -->
         Bakgrunn: Images.Pexels.com
+      </a>
+      <!-- Denne linken forsvinner når skjermen er mindre, ettersom bildet forsvinner -->
+      <a class="original-image-campus"
+      href="https://previews.123rf.com/images/cihankyn/cihankyn2307/cihankyn230700504/208079819-joyful-back-to-school-stationery-illustration.jpg"
+      target="_blank">
+      <!-- This is the photographer of the original image -->
+        Illustrasjon: 123rf.com
       </a>
     </div>
 
