--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <a class="original-image"
                   href="https://media.istockphoto.com/id/1341812465/vector/young-creator-working-at-home-and-relax.jpg?s=1024x1024&w=is&k=20&c=bsnlUnwaTogVwo73GCDVgiOXcxA-E1eImI0YVOwuIjQ="
                   target="_blank">
-                  <!-- This is the photographer of the original image -->
+                  <!-- Dette er den klikkbarelinken til originalbildet -->
                     Illustrasjon: Media.Istockphoto.com
                   </a>
                 </div>
