--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
 
           <div class="about-oslomet-container">
-            <!-- Denne linker til det originale bildet -->
+            <!-- Denne linker til det originale bakgrunnsbilde i headeren -->
             <!-- "target=_blank" taggen sørger for at linken åpnes i en ny fane. -->
-            <div class="original-image-studiestart">
+            <div class="index-venstre-side">
               <a class="original-image"
                 href="https://images.pexels.com/photos/18988561/pexels-photo-18988561/free-photo-of-pink-paper-surface.jpeg"
                 target="_blank">
@@ -125,12 +125,11 @@
                   utdanning. Og allerede i studietiden vil du merke at du kan gjøre en forskjell for andre mennesker.
                 </p>
               </div>
-            <!-- Link til originalt bilde  -->
+            <!-- Link til originalt bilde som ligger på høyre side i headeren når skjermen er i full størrelse -->
               <div class="original-image-index">
                 <a class="original-image"
                   href="https://media.istockphoto.com/id/1341812465/vector/young-creator-working-at-home-and-relax.jpg?s=1024x1024&w=is&k=20&c=bsnlUnwaTogVwo73GCDVgiOXcxA-E1eImI0YVOwuIjQ="
                   target="_blank">
-                  <!-- Dette er den klikkbarelinken til originalbildet -->
                     Illustrasjon: Media.Istockphoto.com
                   </a>
                 </div>
@@ -222,6 +221,7 @@
 
 
         <!----------------- GRID ------------------->
+        <!-- (forstettelse av koden over statisitkk) slik at teksten skal ligge likt over og under statistikk -->
 
 
           <div class="about-oslomet-container">
