--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
 
           
           <div class = "footer">  
-        <!-- Footeren inneholder informasjon om hvor vi har hentet tekst og annen info på siden fra, i tillegg til forfattere av siden -->
+        <!-- Footeren inneholder informasjon om hvor vi har hentet tekst og annen info på siden fra -->
             <footer>
               <p>
                 All informasjon på denne siden er hentet fra 
-                <!-- Her er det en link til siden som er "kopiert", og hvor tekst og bilde er tatt fra. -->
+                <!-- Her er det en link til siden hvor tekst er tatt fra. -->
                 <a class= "kildelink" href="https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet" 
                 alt ="link til siden hvor teksten på siden er hentet fra"
                 target="_blank">
