--- a/campus.html
+++ b/campus.html
@@ -56,7 +56,7 @@
 
     <!--------------- HEADING ------------------->
 
-    <div class="content-campus">
+     <!-- Vi har valgt å bruke samme div'er som i index.html for å få et sammenhengende design -->
       <div class="heading-container">
         <div class="main-heading">
           <div>
@@ -64,6 +64,7 @@
               Våre studiesteder
             </h1>
             <p>
+              <!-- Har lagt inn linjebrekk (<br>) slik at teksten legger seg fint under hverandre -->
               OsloMet har studiesteder både i Oslo og <br>  
               på Kjeller ved Lillestrøm. Vårt største campus <br> 
               ligger sentralt i Oslo ved Bislett, og campusen på <br>
@@ -77,7 +78,6 @@
           <img src="img/University-9.webp" class="image-campus" alt="illustrasjon_av_student">
         </div>
       </div>
-    </div>
     <div>
       <a class="original-image"
         href="https://images.pexels.com/photos/18988561/pexels-photo-18988561/free-photo-of-pink-paper-surface.jpeg"
@@ -89,7 +89,6 @@
       <a class="original-image-campus"
       href="https://previews.123rf.com/images/cihankyn/cihankyn2307/cihankyn230700504/208079819-joyful-back-to-school-stationery-illustration.jpg"
       target="_blank">
-      <!-- This is the photographer of the original image -->
         Illustrasjon: 123rf.com
       </a>
     </div>
@@ -98,15 +97,16 @@
     <!------------------ CHECKBOXER ----------------->
 
 
+    <!-- Koden til checkboksene er gjenbrukt og videreutviklet fra oblig 2 -->
        <div class="innledning-checkbox">
           <input type="checkbox" id="title-4" />
             <label for="title-4">
 
-              <!---En nedtrekksmeny som skal vise litt om de ulike campusene til OsloMet-->
+              <!---En "mappe" som ved klikk skal vise litt om de ulike campusene til OsloMet-->
                 <div class = "grid-campus-boxes">
 
-                      <!--Setter inn en klasse for å få lagt inn et bilde og tekst i nedtrekksmeny. 
-                        Bilde av campuset på venstre side i nedtrekksmenyen-->
+                      <!--Setter inn en klasse for å få lagt inn et bilde og tekst i "mappen". 
+                        Bilde av campuset på venstre side i "mappen"-->
 
                 <a href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xxlarge/8/1/8/1/1818-8-nor-NO/pilestredet.jpg" target="_blank">
                   <div class="campus-bilde">
@@ -137,7 +137,8 @@
             <!-- Fotografen av bildet -->
               Foto: Ukjent/Hentet fra OsloMet. Trykk på bildet eller denne linken for å åpne originalbilde.
             </a>
-            <!--Informasjonen om campuset som skal komme når du klikker i nedtrekksmenyen!-->
+
+            <!--Informasjonen om campuset som skal komme når du klikker på boksen -->
           </div>
           <p class="campus-info">
             En rekke av bygningene ligger i det tradisjonsrike Frydenlund-området ved Bislett. Der man tidligere 
@@ -170,12 +171,12 @@
         <input type="checkbox" id="title-5" />
           <label for="title-5">
 
-                      <!---En nedtrekksmeny som skal vise litt om de ulike campusene til OsloMet-->
+                      <!-- En "mappe" som skal vise litt om de ulike campusene til OsloMet ved klikk slik som over -->
         
                 <div class = "grid-campus-boxes">
 
-                      <!--Setter inn en klasse for å få lagt inn et bilde og tekst i nedtrekksmeny. 
-                        Bilde av campuset på venstre side i nedtrekksmenyen-->
+                      <!--Setter inn en klasse for å få lagt inn et bilde og tekst i "mappen". 
+                        Bilde av campuset på venstre side i "mappen"-->
 
                 <a href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/medium/4/5/8/2/42854-2-nor-NO/kjeller.jpg" target="_blank">
                   <div class="campus-bilde">
@@ -184,6 +185,7 @@
                 </a>
 
                       <!--Setter inn litt kort informasjon om campuset ved siden av bildet-->
+
               <div class="tekst-i-boks">
                 <div class="teksten">
                   <h2 class="campusnavn">
@@ -197,14 +199,13 @@
             </div>
           </label>
 
-                    <!--Informasjonen om campuset som skal komme når du klikker i nedtrekksmenyen-->
+                    <!-- Informasjonen om campuset som skal komme når du klikker i "mappen" -->
 
          <div class="content">
           <div class="original-image-studiestart">
             <a class="original-image"
             href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/medium/4/5/8/2/42854-2-nor-NO/kjeller.jpg"
             target="_blank">
-            <!-- This is the photographer of the original image -->
               Foto: Ukjent/Hentet fra OsloMet. Trykk på bildet eller denne linken for å åpne originalbilde.
             </a>
           </div>
