--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                   <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
                   <!-- Bildet er gitt en alternativ tekst hvis den ikke kan vises på siden -->
                   <!-- Når du klikker på logoen tas du til oslomet.no -->
+                  <!-- Logoen er kopiert og lastet ned fra oslomet.no -->
                   <a class="oslomet-logo" href="https://www.oslomet.no/" target="_blank">
                     <img src="img/oslomet-logo-black.svg" alt="OsloMet sin logo">
                   </a>
