--- a/topical.html
+++ b/topical.html
@@ -113,6 +113,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
                 EMNENAVN: <br>
                 Programming
               </h3>
+              <!-- Vi valgte å bruke <h3>-tagen fordi vi ville ha teksten i boksene "bold" -->
             </div>
           </div>
         </div>
