--- a/topical.html
+++ b/topical.html
@@ -253,7 +253,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
               </h2>
             </label>
             <section class="content-learning-outcomes">
-              <!-- Denne koden er lik den vi lagde i oblig 2 -->
+              <!-- Denne koden inspirert av den vi lagde i oblig 2 -->
               <div class="list-learning-outcomes">
                 <div>
                   <!-- Her har vi lagt inn en paragraph-tag som en slags sub-heading inne i checkboxen-->
