--- a/topical.html
+++ b/topical.html
@@ -386,6 +386,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
                 <div class="nav-links-footer">
                   <!-- Linkene til de andre sidene våre legges også neders, slik at man ikke må scrolle til toppen av siden for å tas videre -->
                   <!-- Linkene er plassert i en uordnet liste, som listeelementer -->
+                  <!-- Listeelementene i nav'taggen er kopiert fra "header"-en på denne siden -->
                     <nav>   
                       <p>
                         Linker til de andre sidene våre:
