--- a/accessibility.html
+++ b/accessibility.html
@@ -69,7 +69,7 @@
       <h1>
         Accessibility-side
       </h1>
-    <!-- Dette er teksten under overskriften, brukt som en slags underoverskrift-->
+    <!-- Dette er teksten under overskriften, brukt som en slags underoverskrift -->
       <p>
         Vi har kjørt accessibility test gjennom Lighthouse i Google Chrome.  
         Dette gjøres for å sjekke hvor universelt utformet en nettside er. 
@@ -97,10 +97,11 @@
      <div class="list-accessibility">
       <ul>
         <li>
-          Vi har ikke plassert tekst inne i bilder for å gjøre det enklere for folk med nedsatt syn
+          Vi har ikke plassert tekst inne i bilder for å gjøre det enklere for folk med nedsatt syn.
         </li>
         <li>
-          Vi har delt opp lengre paragrafer i flere, kortere paragrafer, slik at det blir lettere å lese
+          Vi har delt opp lengre paragrafer i flere, kortere paragrafer, slik at det blir lettere å lese. Vi har 
+          lagt inn line-breaks for å gjøre teksten lettere å lese.
         </li>
         <li>
           Det er lagt skygge/endret farge når man fører musepekeren over en checkbox eller lignende.
