--- a/accessibility.html
+++ b/accessibility.html
@@ -128,6 +128,8 @@
   <!-- Koden for checkboxene er lik som koden for checkboxene på de andre sidene og styles likt i CSS'en -->
   <div class="innledning-checkbox">
     <!-- Hvert input og label gis en unik id og for. Dette er nødvendig for at man skal kunne åpne checkboksene. -->
+
+
     <!-- Dette er checkboks 1 -->
     <input type="checkbox" id="title-4" />
     <!-- Dette vises som "tittelen" til checkboksen -->
@@ -147,11 +149,10 @@
         <div class="box box-1">
           <!-- Inne i checkboksene har vi lagt informasjon om accessibility testen, med informasjon og screenshots -->
           <img class="img" src="img/accessibility-test-85.webp"  
-          alt="accessibility test nr. 1" 
-          style="width: 100%;">
+          alt="accessibility test nr. 1" >
         <div class="overlay">
           <div class="text">
-            <!-- Link til en større versjon av testen. Denne åpnes i en tom fane -->
+            <!-- Link til en større versjon av testen. Denne åpnes i en ny fane -->
             <!-- Tekst og heading er link til dette bildet -->
             <a href="img/accessibility-test-85.webp" target="_blank">
               <p>
@@ -168,8 +169,7 @@
       </div>
       <div class="box box-2">
         <img class="img" src="img/Code before.webp"  
-        alt="kode_før_endring" 
-        style="width: 100%;">
+        alt="kode_før_endring" >
           <div class="overlay">
             <div class="text">
               <a href="img/Code before.webp" target="_blank">
@@ -187,8 +187,7 @@
         </div>
         <div class="box box-3">
           <img class="img" src="img/Code after.webp" 
-          alt="Kode_etter_endring"
-          style="width: 100%;">
+          alt="Kode_etter_endring">
             <div class="overlay">
               <div class="text">
                 <a href="img/Code after.webp" target="_blank">
@@ -206,8 +205,7 @@
           </div>
           <div class="box box-4">
             <img class="img" src="img/accessibility_index.webp" 
-            alt="Kode før"
-            style="width: 100%;">
+            alt="Kode før">
             <div class="overlay">
               <div class="text">
                 <a href="img/accessibility_index.webp" target="_blank">
@@ -224,8 +222,7 @@
             </div>
           </div>
           <div class="box box-4">
-            <img class="img" src="img/Accessibility_nytt_design_index.webp" alt="accessibility test etter nytt design"
-            style="width: 100%;">
+            <img class="img" src="img/Accessibility_nytt_design_index.webp" alt="accessibility test etter nytt design">
             <div class="overlay">
               <div class="text">
                 <a href="img/Accessibility_nytt_design_index.webp" target="_blank">
@@ -268,8 +265,7 @@
           </div>
           <div class="box box-5">
             <img class="img" src="img/accessibility_topical.webp"  
-            alt="accessibility test" 
-            style="width: 100%;">
+            alt="accessibility test">
               <div class="overlay">
                 <div class="text">
                   <a href="img/accessibility_topical.webp" target="_blank">
@@ -286,8 +282,7 @@
               </div>
             </div>
             <div class="box box-5">
-              <img class="img" src="img/Accessibility_nytt_design_topical.webp" alt="accessibility test etter endring av design"
-              style="width: 100%;">
+              <img class="img" src="img/Accessibility_nytt_design_topical.webp" alt="accessibility test etter endring av design">
               <div class="overlay">
                 <div class="text">
                   <a href="img/Accessibility_nytt_design_topical.webp" target="_blank">
@@ -312,6 +307,7 @@
             </div>
           </div>
         </div>
+
         <!-- Dette er checkbox 3 -->
         <div class="innledning-checkbox">
           <input type="checkbox" id="title-6" />
@@ -329,8 +325,7 @@
               </div>
               <div class="box box-6">
                 <img class="img" src="img/accessibility_campus.webp"  
-                alt="accessibility test" 
-                style="width: 100%;">
+                alt="accessibility test">
               <div class="overlay">
                 <div class="text">
                   <a href="img/accessibility_campus.webp" target="_blank">
@@ -347,8 +342,7 @@
               </div>
             </div>
             <div class="box box-6">
-              <img class="img" src="img/Accessibility_nytt_design_campus.webp" alt="bilde av accessibility-testen etter endring av design"
-              style="width: 100%;">
+              <img class="img" src="img/Accessibility_nytt_design_campus.webp" alt="bilde av accessibility-testen etter endring av design">
               <div class="overlay">
                 <div class="text">
                   <a href="img/Accessibility_nytt_design_campus.webp" target="_blank">
