--- a/accessibility.html
+++ b/accessibility.html
@@ -246,7 +246,7 @@
         </div>
       </div>
 
-      <!-- Dette er checkbox 2 -->
+      <!-- Dette er checkbox 2, den er kodet på samme måte som checkbox 1-->
     <div class="innledning-checkbox">
       <input type="checkbox" id="title-5" />
         <label for="title-5">
@@ -254,8 +254,6 @@
             Accessibility test topical.html
           </h2>
         </label>
-        <!-- This is the container of the content inside the "innledning"-checkbox -->
-        <!-- This is only shown when the checkbox is open -->
       <div class="content">
         <div id="accessibility-container" class="accessibility-container">
           <div class="forklaring">
