Endre linkingen til css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <!-- Dette indikerer nettsidens tegnkoding -->
             <meta charset="utf-8">
             <!-- Linker html filen til CSS filen vår  -->
-            <link rel="stylesheet" type="text/css" href="css/main.css"> 
+            <link rel="stylesheet" type="text/css" href="/css/main.css"> 
       </head>
       <body>
         <!-- DEN GJENNOMGÅENDE KODEN VÅR ER TIL EN VISS GRAD INSPIRERT AV KODE VI HAR FUNNET PÅ W3SCHOOLS.COM,
