--- a/topical.html
+++ b/topical.html
@@ -10,7 +10,7 @@
     <!-- Dette indikerer nettsidens tegnkoding -->
     <meta charset="utf-8">
     <!-- Linker html filen til CSS fil  -->
-    <link rel="stylesheet" href="css/topical.css">
+    <link rel="stylesheet" href="/css/topical.css">
   </head>
   <body>
 
